# Jira-Assistant

./: .env.example  .gitignore  FLOW.md  README.md  pyproject.toml  streamlit_app.py
data/source_docs/: rag-config.md
src/demolanggraph/: __init__.py  cli.py  embeddings.py  graph.py  graph_advanced.py  ingest.py  jira_sync.py  llm.py  settings.py  vectorstore.py
src/demolanggraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: debug_proxy.py
